Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-12377

When "built-in camel case navigation" is disabled, Ctrl+Backspace only deletes one character if cursor is before a symbol

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P4: Low
    • Qt Creator 4.12.0-beta1
    • Qt Creator 3.1.1
    • Editors
    • None
    • 67ea1e1f84bdabb7fcffbb4d5c5f3de9350694a1 (qt-creator/qt-creator/master)

    Description

      To reproduce:

      1. Untick "Enable built-in camel case navigation" in Options -> Text Editor -> Behavior.
      2. Enter the following in editor:
          width: 100
        
      3. Place cursor before the colon.
      4. Press Ctrl+Backspace.
      5. Only 'h' is deleted.
      6. Same behavior if cursor is before {, (, dot, comma etc.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            davschul David Schulz
            fxam fxam
            Votes:
            1 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes