Editor: Also fix DeleteStartOfWord for camel case deactivated

this amends 5a4bfb2460dfa5346739508ecf814e88859b9baa

Change-Id: Ibd635e47e8ed90cb26f7a2ba233582ab540618ca
Fixes: QTCREATORBUG-12377
Reviewed-by: Christian Stenger <christian.stenger@qt.io>